--- a/mcp/package.json
+++ b/mcp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "honcho-vault-mcp",
-  "version": "0.1.0",
-  "description": "MCP server that bridges an Obsidian vault with Honcho's identity platform",
+  "version": "0.2.0",
+  "description": "Unified Intelligence MCP server: Obsidian CLI + Honcho semantic memory",
   "private": true,
   "type": "module",
   "main": "server.ts",
@@ -10,5 +10,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.3.9"
   }
 }
